--- a/source/_config.yml
+++ b/source/_config.yml
@@ -1,6 +1,6 @@
-avatar: https://cdn.jsdelivr.net/gh/nexmoe/nexmoe.github.io@latest/images/avatar.png # 网站 Logo
+avatar: https://cdn.jsdelivr.net/gh/chireiden/chireiden.github.io@latest/images/avatar.png # 网站 Logo
 background: # 既是博客的背景，又是文章默认头图
-  path: https://cdn.jsdelivr.net/gh/nexmoe/nexmoe.github.io@latest/images/cover/5c3aec85a4343.jpg
+  path: https://cdn.jsdelivr.net/gh/chireiden/chireiden.github.io@latest/images/cover/5c3aec85a4343.jpg
   width: 1440
   height: 960
 favicon:
@@ -14,14 +14,14 @@ function: # 功能开关，可选值（true,false）
 imageCDN: # 图片 CDN 功能
   enable: false # 开启该功能  
   origin: /../../images/ # 图片原始目录
-  to: https://cdn.jsdelivr.net/gh/nexmoe/nexmoe.github.io@latest/images/ # 图片 CDN 域名
+  to: https://cdn.jsdelivr.net/gh/chireiden/chireiden.github.io@latest/images/ # 图片 CDN 域名
   
-# 附加图标库 使用说明：https://docs.nexmoe.com/config/icon
+# 附加图标库 使用说明：https://docs.chireiden.com/config/icon
 iconlib: # //at.alicdn.com/t/font_1038733_0xvrvpg9c0r.css
 
 search: 
   type: engine # 可选engine（用搜索引擎搜索）、swiftype、或local（本地搜索）
-  url: https://cn.bing.com/search?q=site:nexmoe.com # 搜索引擎地址，在type为swiftype时无效 e.g:https://www.google.com/search?q={你的博客链接}
+  url: https://cn.bing.com/search?q=site:chireiden.com # 搜索引擎地址，在type为swiftype时无效 e.g:https://www.google.com/search?q={你的博客链接}
   id: <swiftype-id> # swiftype的id，见启用教程。在type为engine时无效
 
 cdn: # 这里可以修改站点使用的库的CDN
@@ -40,14 +40,14 @@ menu:
   回到首页: 
     - /
     - icon-home
-#  文章归档:  # 使用说明：https://docs.nexmoe.com/article/archive
+#  文章归档:  # 使用说明：https://docs.chireiden.com/article/archive
 #    - /archive.html
 #    - icon-container
   关于博客:
     - /about.html
     - icon-info-circle
   我的朋友: 
-    - /PY.html # 使用说明：https://docs.nexmoe.com/article/py
+    - /PY.html # 使用说明：https://docs.chireiden.com/article/py
 
 widgets:
 - search
@@ -73,7 +73,7 @@ social:
     - rgb(231, 106, 141)
     - rgba(231, 106, 141, .15)
   GitHub:
-    - https://github.com/nexmoe/
+    - https://github.com/chireiden/
     - icon-github
     - rgb(25, 23, 23)
     - rgba(25, 23, 23, .15)
@@ -99,14 +99,14 @@ analytics:
 # 评论框，目前支持 gitalk,gitment,valine,disqus,disqusjs,changyan,livere,DiscussBot,waline 使用 false 可以关闭
 comment: gitalk
 gitalk:
-  admin: nexmoe # 拥有对该repo进行操作的 GitHub username
-  owner: nexmoe # 持有该 repo 的 GitHub username
-  repo: nexmoe.github.io # 存放评论的 issue 所在的 repo
+  admin: chireiden # 拥有对该repo进行操作的 GitHub username
+  owner: chireiden # 持有该 repo 的 GitHub username
+  repo: chireiden.github.io # 存放评论的 issue 所在的 repo
   clientID: 80b2453b6d5f37ad6225 # GitHub Client ID
   clientSecret: 43e99fa852795c9a7b3eb924b2558c64b84bbdeb # GitHub Client Secret
 gitment:
-  owner: nexmoe # 持有该 repo 的 GitHub username
-  repo: nexmoe.github.io # 存放评论的 issue 所在的 repo
+  owner: chireiden # 持有该 repo 的 GitHub username
+  repo: chireiden.github.io # 存放评论的 issue 所在的 repo
   clientID: 80b2453b6d5f37ad6225 # GitHub Client ID
   clientSecret: 43e99fa852795c9a7b3eb924b2558c64b84bbdeb # GitHub Client Secret
 valine: 
